# FFmpeg-GCU

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build_ffmpeg.sh  readme.md
src/: configure  configure_insert.sh
src/compat/gcc4/: stdatomic.h
src/examples/: Makefile  decode_tops.c  example_insert.sh  hw_decode_multi_tops.c  hw_decode_tops.c
src/libavcodec/: Makefile  allcodecs.c  avcodec_insert.sh  ff_topscodec_buffers.c  ff_topscodec_buffers.h  ff_topscodec_dec.c  ff_topscodec_dec.h
src/libavformat/: cavsvideodec.c  cavsvideodec_insert.sh
src/libavutil/: Makefile  avutil_insert.sh  hwcontext.c  hwcontext.h  hwcontext_internal.h  hwcontext_topscodec.c  hwcontext_topscodec.h  pixdesc.c  pixfmt.h
